# reverse-proxy-

./: .gitignore  README.md  default.conf  docker-compose.yml  docker_stats.csv  docker_stats2csv.sh  main.py  nginx_status.csv  nginx_status2csv.sh  pyproject.toml
a3/: agent1_nump_1300.csv  agent1_nump_1600.csv  agent1_nump_2500.csv  agent1_nump_3000.csv  agent3_nump_1000.csv  agent3_nump_1300.csv  agent3_nump_1600.csv  agent3_nump_2500.csv  agent3_nump_3000.csv  ds_agent1_nump_1000.csv  ds_agent1_nump_1300.csv  ds_agent1_nump_1600.csv  ds_agent1_nump_2500.csv  ds_agent1_nump_3000.csv  ds_agent3_nump_1000.csv  ds_agent3_nump_1300.csv  ds_agent3_nump_1600.csv  ds_agent3_nump_2500.csv  ds_agent3_nump_3000.csv
blog/: index.html
blog/assets/js/: jquery.scrolly.min.js:Zone.Identifier
conf/cache/: default.conf
conf/nginx/: nginx.conf
docker/fastapi/: Dockerfile
happyfriday/: ds_cho_600.csv  ds_num_420.csv  ds_num_500.csv  ds_num_600.csv
nginx-sites-enabled/: lb  mygoogle  mynaver
note/: ISSUE90.ipynb  Untitled.ipynb  cho_440.csv  docker_stats.ipynb  ds_noramp_nump_1600.csv  ds_normap_nump_550.csv  ds_num_1200.csv  ds_num_400.csv  ds_num_430.csv  ds_num_440.csv  ds_num_450.csv  ds_nump_1000.csv  ds_nump_1050.csv  ds_nump_1100.csv  ds_nump_1300.csv  ds_nump_1400.csv  ds_nump_1600.csv  ds_nump_900.csv  noramp_nump_550.csv  nump_1000.csv  nump_1050.csv  nump_1100.csv  nump_1200.csv  nump_1400.csv  nump_1600.csv  nump_440.csv  numpy_basic.ipynb
pyweb1/: index.html
pyweb2/: index.html
pyweb3/: index.html
pyweb4/: index.html
src/: higher_order_fun.py
(+1 files in other folders)
