[project]
name = "reverse-proxy"
version = "0.1.0"
description = "reverse-proxy"
authors = [
    {name = "jacob-53", email = "jacob8753@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.8", "numpy>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
